--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lily</title>
+    <title>Natalia's work</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    Hello everybody
+  </body>
 </html>
