deleted extra teg boby

--- a/exercises/lecture-02/contact.html
+++ b/exercises/lecture-02/contact.html
@@ -21,27 +21,27 @@
           </li>
         </ul>
       </nav>
-       <h1>Welcome to...</h1>
-        <p>Це елемент заголовка 1</p>
-    </header>      
-      <!-- Цей тег дозволяє зберегти оригінальне форматування.  -->
-		<pre>
+      <h1>Welcome to...</h1>
+      <p>Це елемент заголовка 1</p>
+    </header>
+    <!-- Цей тег дозволяє зберегти оригінальне форматування.  -->
+    <pre>
 		       Но зла Юнона, суча дочка,
 		       Розкудкудакалась, як квочка, —
 		       Енея не любила — страх;
 		       Давно уже вона хотіла,
 		       Його щоб душка полетіла
 		       К чортам і щоб і дух не пах.
-		</pre>
-     <!-- Це розділ, що є нижнім колонтитулом для його найближчого предка або кореневого елемента. -->
-	<footer>
-	    <!-- container -->
-	    <div>
-		    <!-- Замінити символ © посиланням на сутність -->
-		    <p>&copy; 2024 All rights reserved.</p>
-            <a href="https://www.google.com.ua/" target="_blank">Google</a>
-	    </div>
-	</footer>
-    </body>
+		</pre
+    >
+    <!-- Це розділ, що є нижнім колонтитулом для його найближчого предка або кореневого елемента. -->
+    <footer>
+      <!-- container -->
+      <div>
+        <!-- Замінити символ © посиланням на сутність -->
+        <p>&copy; 2024 All rights reserved.</p>
+        <a href="https://www.google.com.ua/" target="_blank">Google</a>
+      </div>
+    </footer>
   </body>
 </html>
