--- a/exercises/lecture-03/index.html
+++ b/exercises/lecture-03/index.html
@@ -14,11 +14,6 @@
       }
     </style>
     <style>
-      p {
-        color: rgb(21, 15, 202);
-      }
-    </style>
-    <style>
       /* ===== 3 завдання=========== */
       #exciting {
         background: #f69d3c;
@@ -71,7 +66,7 @@
     ></iframe>
     <!-- 
 		Додайте тут елеиент p з текстом This is my paragraph. визначте атрибут style для тега p зі значенням color: blue;-->
-    <p>This is my paragraph</p>
+    <p style="color: blue">This is my paragraph</p>
     <!--Який колір буде мати текст This is my paragraph і чому? 
         Відповідь: Текст буде мати значення color: blue. Тому що код зчитується згори до низу, у тому порядку, в якому вони 
         включені. Тим самим, застосується стиль, який прописан нижче по коду. 
