--- a/exercises/lecture-04/index.html
+++ b/exercises/lecture-04/index.html
@@ -19,15 +19,15 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe
       placeat quisquam, eveniet aliquam ipsum amet cupiditate repudiandae
       obcaecati, impedit aperiam.
-    </main>
-    <!-- ======== 3 завдання================================= -->
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-    </ul>
-    ``` - виберіть елементи, які є прямими дочірніми елементами батьківського
+      <!-- ======== 3 завдання================================= -->
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+      </ul>
+      <!-- ``` - виберіть елементи, які є прямими дочірніми елементами батьківського
     елемента ul та встановіть для них властивість font-weight: bold. - Додати до
-    index.html: ```html
+    index.html: ```html -->
+    </main>
     <section>
       <p>This is a paragraph.</p>
       <div>
