--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <nav>
       <ul>
         <li>
-          <a href="#">Home</a>
-          <a href="about.html">About</a>
+          <a href="index.html">Home</a>
+          <a href="#">About</a>
           <a href="catalog.html">Catalog</a>
           <a href="contact.html">Contact</a>
         </li>
@@ -25,18 +25,6 @@
     <h3>Про HTML</h3>
     <h3>Про CSS</h3>
 
-    <p>
-      This is regular text.<br />
-      This is another line after line break.<br />
-      This is another line after line <br />
-    </p>
-
-    <p>This is a first paragraph. You can add any kind of text here.</p>
-    <p>This is a second paragraph. This is some sample text.</p>
-    <p>
-      This is another paragraph. You can add multiple lines of text in this
-      paragraph.
-    </p>
     <footer>
       <section>
         <div>
