--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Моя домашня сторінка</title>
+    <title>Catalog</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto::wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -21,9 +25,22 @@
     <header>
       <h1>Ласкаво просимо до мого сайту!</h1>
     </header>
-    <h2>Про програмування</h2>
-    <h3>Про HTML</h3>
-    <h3>Про CSS</h3>
+    <aside>
+      <h2 class="text-uppercase">Categories</h2>
+
+      <div class="bg-dark text-white">
+        <strong class="text-uppercase">Fashion &amp; Acc</strong>
+      </div>
+
+      <ul class="list-unstyled categories">
+        <li><a href="#!">Women's T-Shirts</a></li>
+        <li><a href="#!">Men's T-Shirts</a></li>
+        <li><a href="#!">Dresses</a></li>
+        <li><a href="#!">Novelty socks</a></li>
+        <li><a href="#!">Women's sunglasses</a></li>
+        <li><a href="#!">Men's sunglasses</a></li>
+      </ul>
+    </aside>
 
     <footer>
       <section>
