--- a/exercises/lecture-08/index.html
+++ b/exercises/lecture-08/index.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <link href="css/main.css" rel="stylesheet" />
-    <style>
-      .box {
-        padding-top: 10px;
-        padding-right: 20px;
-        padding-bottom: 25px;
-        padding-left: 20px;
 
-        margin-top: 25px;
-        margin-right: 20px;
-        margin-bottom: 25px;
-        margin-left: 20px;
-      }
-      /* Перепишіть властивості padding та margin за допомогою скороченого синтаксу
-.box {
-    padding: 10px 20px 25px 20px;
-    margin: 25px 20px 25px 20px
-} */
-      div {
-        border: 10px dotted black;
-        padding: 15px;
-        background: lightblue;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="box"></div>
-    <br />
-    <div class="first-box"></div>
-    <br />
-    <div class="second-box"></div>
-    <br />
-    <div id="example1">
-      <p>
-        Правило для example1: фон всередині елемента має простягатися за межі
-        рамки.
-      </p>
-    </div>
-    <br />
-    <div id="example2">
-      <p>
-        Правило для example2: фон всередині елемента має простягатися до
-        внутрішнього краю рамки.
-      </p>
-    </div>
-    <br />
-    <div id="example3">
-      <p>
-        Правило для example3: фон всередині елемента має простягатися до краю
-        поля вмісту.
-      </p>
-    </div>
-    <br />
-    <h1>Awesome <span>article</span></h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+  <link href="css/main.css" rel="stylesheet" />
+  <style>
+    .box {
+      padding-top: 10px;
+      padding-right: 20px;
+      padding-bottom: 25px;
+      padding-left: 20px;
+
+      margin-top: 25px;
+      margin-right: 20px;
+      margin-bottom: 25px;
+      margin-left: 20px;
+    }
+
+    /* Перепишіть властивості padding та margin за допомогою скороченого синтаксу
+      .box {
+        padding: 10px 20px 25px 20px;
+        margin: 25px 20px 25px 20px
+      } */
+    div {
+      border: 10px dotted black;
+      padding: 15px;
+      background: lightblue;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="box"></div>
+  <br />
+  <div class="first-box"></div>
+  <br />
+  <div class="second-box"></div>
+  <br />
+  <div id="example1">
+    <p>
+      Правило для example1: фон всередині елемента має простягатися за межі
+      рамки.
+    </p>
+  </div>
+  <br />
+  <div id="example2">
+    <p>
+      Правило для example2: фон всередині елемента має простягатися до
+      внутрішнього краю рамки.
+    </p>
+  </div>
+  <br />
+  <div id="example3">
+    <p>
+      Правило для example3: фон всередині елемента має простягатися до краю
+      поля вмісту.
+    </p>
+  </div>
+  <br />
+  <h1><span>Awesome article</span></h1>
+</body>
+
 </html>
