--- a/exercises/lecture-09/index.html
+++ b/exercises/lecture-09/index.html
@@ -1,90 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lecture #9 Управління потоком</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <link href="css/main.css" rel="stylesheet" />
-    <style>
-      img {
-        width: 250px;
-        margin-left: 17px;
-        margin-bottom: 10px;
-        float: right; /*1 завдання: Перемістити зображення вправо*/
-      }
-    </style>
-    <!-- ===== 4 завдання======== -->
-    <!-- Що треба додати до визначення dt, щоб змусити панель навігації прокручуватися разом зі
-       сторінкою до певної точки, а потім залишатися у верхній частині сторінки. -->
-    <style>
-      dt {
-        background-color: black;
-        color: white;
-        padding: 10px;
-        margin: 1em 0;
-        position: sticky;
-        top: 0;
-        left: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Управління потоком</h1>
-    <p>
-      Examples of the CSS float Property Below are some examples of how the CSS
-      float property works.
-      <img src="images.jpg" />
-    </p>
-    <!-- ===== 2 завдання======== -->
-    <p class="absolute-position">
-      Статичне позиціонування є типовим для кожного елемента. Це просто означає,
-      помістіть елемент у звичайне положення в документі.
-    </p>
-    <p class="static-position">
-      Статичне позиціонування є типовим для кожного елемента. Це просто означає,
-      помістіть елемент у звичайне положення в документі.
-    </p>
 
-    <p class="relative-position">
-      Відносне позиціювання. Положення елемента встановлюється відносно його
-      поточного положення. Додавання властивостей left, top, right і bottom
-      змінює позицію елемента і зрушує його в ту чи іншу сторону. Ця властивість
-      дозволяє змінювати позицію елемента без зміни макету.
-    </p>
-    <!-- ===== 4 завдання======== -->
-    <dl>
-      <dt>A</dt>
-      <dd>Apple</dd>
-      <dd>Ant</dd>
-      <dd>Altimeter</dd>
-      <dd>Airplane</dd>
-      <dt>B</dt>
-      <dd>Bird</dd>
-      <dd>Buzzard</dd>
-      <dd>Bee</dd>
-      <dd>Banana</dd>
-      <dd>Beanstalk</dd>
-      <dt>C</dt>
-      <dd>Calculator</dd>
-      <dd>Cane</dd>
-      <dd>Camera</dd>
-      <dd>Camel</dd>
-      <dt>D</dt>
-      <dd>Duck</dd>
-      <dd>Dime</dd>
-      <dd>Dipstick</dd>
-      <dd>Drone</dd>
-      <dt>E</dt>
-      <dd>Egg</dd>
-      <dd>Elephant</dd>
-      <dd>Egret</dd>
-    </dl>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>lecture #9 Управління потоком</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+  <link href="css/main.css" rel="stylesheet" />
+  <style>
+    img {
+      width: 250px;
+      margin-left: 17px;
+      margin-bottom: 10px;
+      float: right;
+      /*1 завдання: Перемістити зображення вправо*/
+    }
+  </style>
+  <!-- ===== 4 завдання======== -->
+  <!-- Що треба додати до визначення dt, щоб змусити панель навігації прокручуватися разом зі
+       сторінкою до певної точки, а потім залишатися у верхній частині сторінки. -->
+  <style>
+    dt {
+      background-color: black;
+      color: white;
+      padding: 10px;
+      margin: 1em 0;
+      position: sticky;
+      top: 0;
+      left: 0;
+      z-index: 3;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Управління потоком</h1>
+  <p>
+    Examples of the CSS float Property Below are some examples of how the CSS
+    float property works.
+    <img src="images.jpg" />
+  </p>
+  <!-- ===== 2 завдання======== -->
+  <p class="absolute-position">
+    Статичне позиціонування є типовим для кожного елемента. Це просто означає,
+    помістіть елемент у звичайне положення в документі.
+  </p>
+  <p class="static-position">
+    Статичне позиціонування є типовим для кожного елемента. Це просто означає,
+    помістіть елемент у звичайне положення в документі.
+  </p>
+
+  <p class="relative-position">
+    Відносне позиціювання. Положення елемента встановлюється відносно його
+    поточного положення. Додавання властивостей left, top, right і bottom
+    змінює позицію елемента і зрушує його в ту чи іншу сторону. Ця властивість
+    дозволяє змінювати позицію елемента без зміни макету.
+  </p>
+  <!-- ===== 4 завдання======== -->
+  <dl>
+    <dt>A</dt>
+    <dd>Apple</dd>
+    <dd>Ant</dd>
+    <dd>Altimeter</dd>
+    <dd>Airplane</dd>
+    <dt>B</dt>
+    <dd>Bird</dd>
+    <dd>Buzzard</dd>
+    <dd>Bee</dd>
+    <dd>Banana</dd>
+    <dd>Beanstalk</dd>
+    <dt>C</dt>
+    <dd>Calculator</dd>
+    <dd>Cane</dd>
+    <dd>Camera</dd>
+    <dd>Camel</dd>
+    <dt>D</dt>
+    <dd>Duck</dd>
+    <dd>Dime</dd>
+    <dd>Dipstick</dd>
+    <dd>Drone</dd>
+    <dt>E</dt>
+    <dd>Egg</dd>
+    <dd>Elephant</dd>
+    <dd>Egret</dd>
+  </dl>
+</body>
+
 </html>
